--- a/jaxws-ri/runtime/httpspi-servlet/pom.xml
+++ b/jaxws-ri/runtime/httpspi-servlet/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>httpspi-servlet</artifactId>
-    <version>2.3.5</version>
+    <version>2.3.5-ufos</version>
 
     <name>JAX-WS RI HTTP SPI (httpspi-servlet)</name>
     <description>HTTP SPI for JAX-WS RI</description>
