--- a/jaxws-ri/runtime/pom.xml
+++ b/jaxws-ri/runtime/pom.xml
@@ -23,7 +23,7 @@
 
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>runtime</artifactId>
-    <version>2.3.5</version>
+    <version>2.3.5-ufos</version>
 
     <packaging>pom</packaging>
     <name>JAX-WS RI Runtime</name>
