--- a/jaxws-ri/runtime/rt-fi/pom.xml
+++ b/jaxws-ri/runtime/rt-fi/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>rt-fi</artifactId>
-    <version>2.3.5</version>
+    <version>2.3.5-ufos</version>
 
     <name>JAX-WS RI Fast Infoset Support (rt-fi)</name>
     <description>Fast Infoset Support for JAX-WS RI</description>
