--- a/jaxws-ri/runtime/rt/pom.xml
+++ b/jaxws-ri/runtime/rt/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>rt</artifactId>
-    <version>2.3.5</version>
+    <version>2.3.5-ufos</version>
 
     <name>JAX-WS RI Runtime (rt)</name>
     <description>JAX-WS Reference Implementation Runtime</description>
