--- a/jaxws-ri/runtime/servlet/pom.xml
+++ b/jaxws-ri/runtime/servlet/pom.xml
@@ -23,7 +23,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.sun.xml.ws</groupId>
     <artifactId>servlet</artifactId>
-    <version>2.3.5</version>
+    <version>2.3.5-ufos</version>
 
     <name>JAX-WS RI Servlet Support (servlet)</name>
     <description>Servlet Support for JAX-WS RI</description>
